public/stylesheets/style.css
.outerWrap{
    font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    --dark:rgb(33, 73, 58);
    --middle:rgb(79, 126, 108);
    --light:white;
    --big:calc(var(--normal)*1.6);
    --normal:calc(var(--small)*1.6);
    --small:1rem;
    font-size: var(--normal);
    min-height:100dvh;
    display:flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--middle);
}

.header{
    position:relative;
    box-shadow: 0px 0px 2px 4px rgb(54, 54, 54);
    color:var(--light);
    display: flex;
    justify-content: center;
    align-content: center;
    flex-wrap:wrap;
    gap:var(--normal);
    width: 100vw;
    min-height: calc(var(--normal)*3);
    background: linear-gradient(90deg, rgb(33, 73, 58) 0%, rgb(64, 109, 86) 100%);
}
.nav{
    border-radius: var(--small);
    padding:calc(var(--small)/2);
    
}
.nav:hover{
    background-color: rgb(25, 54, 44);
}
#dropdown{
    position:relative;
}
#menu{
    box-shadow: 0px 0px 4px 2px rgb(33, 73, 58);
    border-radius:  var(--small);
    position: absolute;
    background: rgb(101, 133, 122);
    color:black;
    display: flex;
    flex-direction: column;
    gap: var(--small);
    visibility: hidden;
    padding: var(--small);
    transform: translate(calc(var(--small)/-1),0px);
}

.main{
    background-color: var(--light);
    flex:1;
    width: min(100vw,60rem);
    display: flex;
    flex-direction: column;
    gap:var(--normal);
    justify-content: center;
    align-items: center;
}

